// <auto-generated />
using System;
using Management_Atelier_Reparatii.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace Management_Atelier_Reparatii.Migrations
{
    [DbContext(typeof(Management_Atelier_ReparatiiContext))]
    partial class Management_Atelier_ReparatiiContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.2")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Client", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Email")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Nume")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Telefon")
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Client");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.ComandaService", b =>
                {
                    b.Property<int>("ComandaServiceId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ComandaServiceId"));

                    b.Property<DateTime>("DataPrimire")
                        .HasColumnType("datetime2");

                    b.Property<int>("MasinaId")
                        .HasColumnType("int");

                    b.Property<int>("MecanicId")
                        .HasColumnType("int");

                    b.Property<string>("Observatii")
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<int>("Status")
                        .HasColumnType("int");

                    b.HasKey("ComandaServiceId");

                    b.HasIndex("MasinaId");

                    b.HasIndex("MecanicId");

                    b.ToTable("ComandaService");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Masina", b =>
                {
                    b.Property<int>("MasinaId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("MasinaId"));

                    b.Property<string>("AnFabricatie")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ClientId")
                        .HasColumnType("int");

                    b.Property<string>("Marca")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Model")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("NumarInmatriculare")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("MasinaId");

                    b.HasIndex("ClientId");

                    b.ToTable("Masina");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Mecanic", b =>
                {
                    b.Property<int>("MecanicId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("MecanicId"));

                    b.Property<string>("Nume")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Specializare")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Telefon")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("MecanicId");

                    b.ToTable("Mecanic");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.ComandaService", b =>
                {
                    b.HasOne("Management_Atelier_Reparatii.Models.Masina", "Masina")
                        .WithMany("ComenziService")
                        .HasForeignKey("MasinaId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Management_Atelier_Reparatii.Models.Mecanic", "Mecanic")
                        .WithMany("ComenziService")
                        .HasForeignKey("MecanicId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Masina");

                    b.Navigation("Mecanic");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Masina", b =>
                {
                    b.HasOne("Management_Atelier_Reparatii.Models.Client", "Client")
                        .WithMany("Masini")
                        .HasForeignKey("ClientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Client");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Client", b =>
                {
                    b.Navigation("Masini");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Masina", b =>
                {
                    b.Navigation("ComenziService");
                });

            modelBuilder.Entity("Management_Atelier_Reparatii.Models.Mecanic", b =>
                {
                    b.Navigation("ComenziService");
                });
#pragma warning restore 612, 618
        }
    }
}
